compilerplugins/clang/test/returnconstval.cxx
/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4; fill-column: 100 -*- */
/*
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */

#include <rtl/ustring.hxx>

struct S2
{
    OUString mv1;
    // expected-error@+1 {{either return non-const, or by const ref [loplugin:returnconstval]}}
    const OUString get1() { return mv1; }
    const OUString& get2() { return mv1; }
    OUString get3() { return mv1; }
};

/* vim:set shiftwidth=4 softtabstop=4 expandtab cinoptions=b1,g0,N-s cinkeys+=0=break: */
